# prog2_pc1_lab102_v2021_2_template

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake.yml
autograder/: CMakeLists.txt
autograder/tests/: P1.h
autograder/tests/catch_test_1_1/: test_1_1.cpp  test_1_1.in
autograder/tests/catch_test_2_1/: test_2_1.cpp  test_2_1.in
autograder/tests/catch_test_3_1/: test_3_1.cpp
src/: P2.h  P3.h  generate_zip.sh
